# xdi

./: .gitignore  .gitmodules  README.md  Taskfile.yml  justfile  meson.build  xdi
src/: 1.c  xdi.c
src/cheat/: xdi.c
src/disasm/: disasm.c  disasm.h
src/test_applications/: justfile
tests/: xdi_tests.c
tests/libcester/exotic/: cester.h
